Added lab section, changed navbar & started started section

--- a/project/src/index.html
+++ b/project/src/index.html
@@ -22,5 +22,7 @@
   </head>
   <body>
     <app-root></app-root>
+
+    <script src="https://s-sd.ru/files/beautiful-animated-background-site/js/index.js"></script>
   </body>
 </html>
